@@ -4,6 +4,10 @@ Changelog
 1.0b12 - Unreleased
 -------------------
 
+* Add support for facet dependencies: Specifying a facet "foo" like "foo:bar"
+  only makes it show up when a value for "bar" has been previously selected.
+  [witsch]
+
 * Allow indexer methods to raise `AttributeError` to prevent an attribute
   from being indexed.
   [witsch]
